<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bck"
    tools:context=".MainActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="40dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="250dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="logo"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/explore_tunesync"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:rowCount="2"
            android:padding="8dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/goToOfflineMusicButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:textColor="@color/customRed"
                android:backgroundTint="@color/material_dynamic_neutral_variant90"
                android:layout_gravity="start"
                android:text="@string/access_my_music" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/playlistsButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/create_view_playlists" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnConcertSearch"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/search_concerts" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/audioSettingsButton"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/audio_settings" />
        </GridLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="16dp"
        android:text="@string/more_than_music"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/log_me_out"
        android:textColor="@color/black"
        android:backgroundTint="@color/cardview_light_background"
        app:cornerRadius="16dp" />

</LinearLayout>