<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bck">

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <ImageView
        android:id="@+id/appLogoImageView"
        android:layout_width="168dp"
        android:layout_height="146dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:contentDescription="App Logo"
        android:src="@drawable/logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center"
        android:text="@string/welcome_message"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/switchLanguageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="16dp"
        android:text="@string/switch_language"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginBottom="16dp">

        <TextView
            android:id="@+id/registerTextView"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/register_prompt"
            android:textColor="#FFD700"
            android:textStyle="bold"
            android:layout_marginEnd="16dp"
            android:drawablePadding="8dp"
            app:drawableEndCompat="@drawable/media3_icon_plus_circle_unfilled"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingStart="12dp"
                android:paddingEnd="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <EditText
                    android:id="@+id/emailEditText"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:inputType="textEmailAddress"
                    android:hint="@string/email_hint"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:paddingStart="12dp"
                android:paddingEnd="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="320dp"
                    android:layout_height="50dp"
                    android:inputType="textPassword"
                    android:layout_gravity="center"
                    android:hint="@string/password_hint"
                    android:padding="12dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginButton"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/cardview_dark_background"
                android:text="@string/login_button" />

            <Button
                android:id="@+id/fingerprintLoginButton"
                android:layout_width="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/customRed"
                android:text="@string/fingerprint_login" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

</LinearLayout>