<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bck2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <Space
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp">

            <TextView
                android:id="@+id/playlistNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:paddingBottom="10dp"
                android:textSize="24sp"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/playlist_name" />
        </com.google.android.material.card.MaterialCardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/paginatedSongRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginTop="16dp"
            android:visibility="gone" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/graph"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:textSize="16sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:text="@string/genre_distribution" />

                <com.github.mikephil.charting.charts.PieChart
                    android:id="@+id/genreChart"
                    android:layout_width="match_parent"
                    android:layout_height="180dp" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="16dp"
            app:cardElevation="4dp"
            android:layout_marginBottom="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/nowPlayingTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:text="@string/now_playing"
                    android:textSize="16sp"
                    android:gravity="start" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:layout_marginTop="16dp">

                    <ImageButton
                        android:id="@+id/previousButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/circular_button_background"
                        android:src="@android:drawable/ic_media_previous"
                        android:contentDescription="@string/previous" />

                    <ImageButton
                        android:id="@+id/playPauseButton"
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:background="@drawable/circular_button_background"
                        android:src="@android:drawable/ic_media_play"
                        android:contentDescription="@string/play_pause"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp" />

                    <ImageButton
                        android:id="@+id/nextButton"
                        android:layout_width="48dp"
                        android:layout_height="48dp"
                        android:background="@drawable/circular_button_background"
                        android:src="@android:drawable/ic_media_next"
                        android:contentDescription="@string/next" />

                    <Button
                        android:id="@+id/addSongButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:backgroundTint="@color/cardview_dark_background"
                        android:text="@string/add_song"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="16dp" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/songs_in_playlist"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewPlaylistSongs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="16dp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>